cmake_minimum_required(VERSION 3.20.0)

if (NOT DEFINED LLUAC_VERSION_MAJOR)
  set(LLUAC_VERSION_MAJOR 0)
endif()
if (NOT DEFINED LLUAC_VERSION_MINOR)
  set(LLUAC_VERSION_MINOR 0)
endif()
if (NOT DEFINED LLUAC_VERSION_PATCH)
  set(LLUAC_VERSION_PATCH 0)
endif()
set(LLUAC_VERSION_STRING
  ${LLUAC_VERSION_MAJOR}.${LLUAC_VERSION_MINOR}.${LLUAC_VERSION_PATCH})

if (NOT DEFINED LLUAC_BUG_REPORT_URL)
  set(LLUAC_BUG_REPORT_URL "lluac@lluac")
endif()

project(lluac VERSION ${LLUAC_VERSION_STRING} LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(BUILD_SHARED_LIBS ON)

find_package(LLVM REQUIRED CONFIG)

separate_arguments(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
add_definitions(${LLVM_DEFINITIONS_LIST})

include_directories(
  ${LLVM_INCLUDE_DIRS}
  ${CMAKE_CURRENT_SOURCE_DIR}/include
  ${CMAKE_CURRENT_BINARY_DIR}/include)

add_subdirectory(include)
add_subdirectory(lib)
add_subdirectory(tools)
